Main Page Update
Adding... nav bar

--- a/mainPage.html
+++ b/mainPage.html
@@ -4,8 +4,18 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Main Page</title>
+        <link rel="stylesheet" href="main-page.css">
         <script defer src="main-page.js"></script>
       </head>
+      <div class="topnav">
+        <a class="active" href="#home">Home</a>
+        <a href="#sessions">Sessions</a>
+        <a href="#characters">Characters</a>
+        <a href="#worldmap">World Map</a>
+        <a href="#market">Market</a>
+        <a href="#background">Background</a>
+        <a id= "logoff", href="#about", onclick="logOffFunction()">Log Off</a>
+      </div>
       <body>
           <button id="logOff-button"> Log Off</button>
       </body>
