--- a/worldMapPage.html
+++ b/worldMapPage.html
@@ -3,20 +3,21 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Main Page</title>
+        <title>World Map</title>
         <link rel="stylesheet" href="main-page.css">
-        <script defer src="main-page.js"></script>
+        <link rel="stylesheet" href="worldmap-page.css">
+        <script defer src="worldmap-page.js"></script>
       </head>
       <div class="topnav">
-        <a class="active" href="#home">Home</a>
+        <a href="./mainPage.html">Home</a>
         <a href="#sessions">Sessions</a>
         <a href="#characters">Characters</a>
-        <a href="./worldMapPage.html">World Map</a>
+        <a class="active">World Map</a>
         <a href="#market">Market</a>
         <a href="#background">Background</a>
         <a id= "logoff", href="#about", onclick="logOffFunction()">Log Off</a>
       </div>
-      <body>
-          <button id="logOff-button"> Log Off</button>
-      </body>
+      <div id = "mapDiv">
+        <canvas id="myPics" width="560" height="360"></canvas>
+      </div>
 </html>
