Restructued, Calendar, Homepage

--- a/WorldMap/worldMapPage.html
+++ b/WorldMap/worldMapPage.html
@@ -9,7 +9,7 @@
         <script defer src="worldmap-page.js"></script>
       </head>
       <div class="topnav">
-        <a href="./mainPage.html">Home</a>
+        <a href="../MainPage/mainPage.html">Home</a>
         <a href="#sessions">Sessions</a>
         <a href="#characters">Characters</a>
         <a class="active">World Map</a>
