--- a/WorldMap/worldMapPage.html
+++ b/WorldMap/worldMapPage.html
@@ -22,6 +22,8 @@
         <div id="toolbar">
           <img class="shipImage" scr = "ship.jpg">
           <button id="togglePaint"> Toggle </button>
+          <p>Map Scale</p>
+          <input type="range" min="1" max="10" value="5" id="mapZoom">
         </div>
         <div id="mapDiv">
           <div class="drawing-board">
