Working on select

--- a/WorldMap/worldMapPage.html
+++ b/WorldMap/worldMapPage.html
@@ -21,7 +21,10 @@
       <section class="container">
         <div id="toolbar">
           <img class="shipImage" scr = "ship.jpg">
-          <button id="togglePaint"> Toggle </button>
+          <button id="togglePaint"> Paint </button>
+          <button id="togglePan"> Pan </button>
+          <button id="toggleSelect"> Select </button> 
+          <button id="toggleNothing">Nothing</button> 
           <p>Map Scale</p>
           <input type="range" min="1" max="10" value="5" id="mapZoom">
         </div>
